--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -34,7 +34,7 @@ brew 'logstash24'
 brew 'coreutils'
 brew 'findutils'
 cask 'google-chrome'
-cask 'intellij-idea'
+cask 'intellij-idea-ce'
 cask 'iterm2'
 brew 'nginx'
 brew 'openssl'
